fix: alignment of stage and main menu

--- a/src/styles/includes/_stage.scss
+++ b/src/styles/includes/_stage.scss
@@ -6,10 +6,11 @@
 
 	background-color: $color-primary--black;
 	color: $color-primary--white;
-	height: 100vh;
+	height: calc(100vh - 9.5rem);
 	position: relative;
 	overflow: hidden;
 	margin: 0;
+	padding-top: 9.5rem;
 
 	&__headline {
 		@include bp-xs() {
